style.css
/***************
/*    FONTS    *
 ***************/
/* Normal */
@font-face {
    font-family: "Montserrat";
    src: local("Montserrat"),
    url("fonts/montserrat/Montserrat-VariableFont_wght.ttf") format("truetype");
    /* Displays text in a fallback font if Montserrat is downloading; enhances usability on slow connections */
    /* https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/At-rules/@font-face/font-display#syntax */
    font-display: swap;
}

/* Italic */
@font-face {
    font-family: "Montserrat";
    src: local("Montserrat Italic"), local("Montserrat-Italic"),
    url("fonts/montserrat/Montserrat-Italic-VariableFont_wght.ttf") format("truetype");
    font-style: italic;
    font-display: swap;
}


/**************************
 *    GENERAL ELEMENTS    *
 **************************/
/* The wildcard/universal selector doesn't take into account pseudo-elements so they must be specified explicitly */
*, *:after {
    /* Override default margins put in place by certain browser stylesheets */
    margin: 0
}

body {
    /* 1200px (desktop PSD) / 16px (1rem default) = 75 */
    --max-content-width: 75rem;

    /* Font sizes; 36px, 24px, 16px (all scalable) */
    --fs-lg: 2.25rem;
    --fs-md: 1.5rem;
    --fs-sm: 1rem;

    /* Element sizes */
    --el-height-header: 1.8rem;
    --el-height-navbar: 7rem;

    font-family: "Montserrat", sans-serif;

    min-width: 320px;
}

a {
    color: black;
    text-decoration: none;
}

.button-link {
    background-color: #202020;

    color: white;
    font-weight: bold;
    /* In case of wrapping at really narrow widths (e.g. 320px) */
    text-align: center;

    border-style: none;
    border-radius: 5px;

    padding: 0.5em 1.5em;
}

.underline-stylised {
    position: relative;
    font-weight: bold;
}

.underline-stylised::after {
    content: "";
    position: absolute;
    inset: auto 0 -18px 0;
    height: 18px;

    background-image: url("assets/img/underline.png");
    background-repeat: no-repeat;
    /* Stretch to width of text */
    background-size: 100% 100%;
}


/*************************
 *    HEADER & FOOTER    *
 *************************/
header, footer {
    width: 100%;

    color: white;

    /* Vertical centering */
    display: flex;
}

.header-content, .footer-content {
    width: 100%;
    max-width: var(--max-content-width);

    font-size: var(--fs-sm);

    display: flex;
}

header {
    height: var(--el-height-header);
    background-color: #b81d21;
}

.header-content {
    justify-content: end;
    gap: 0.7rem;
    align-items: center;

    /* Vertical centering, right margin to account for scroll bar */
    margin: auto 1rem auto auto;
}

/* Scale and centre social media widgets with text */
.header-social, .header-social img {
    height: 1em;
}

footer {
    background-color: #202020;
    border-top: #b81d21 solid 5px;
}

.footer-content {
    text-align: center;
    font-weight: bold;

    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    column-gap: 3em;
    row-gap: 1em;

    padding: 1rem 1rem;
    margin: auto;
}

/* Horizontally-centered wrapping */
@media (max-width: 40rem) {
    .footer-content {
        flex-direction: column;
    }
}


/****************
 *    NAVBAR    *
 ****************/
.navbar-container {
    /* CARA logo 113px tall, 113/16 = 7.06, rounded down */
    height: var(--el-height-navbar);
    width: 100%;

    position: absolute;
    /* Header height, to offset navbar */
    top: var(--el-height-header);
    z-index: 100;
    /* HACK: usability solution in the absence of a hamburger menu;
        prevents horizontal on narrow screens, instead allowing the navbar to be scrolled */
    overflow: auto;

    display: flex;
    justify-content: center;

    background-color: white;
    box-shadow: 0 20px 27px -27px;
}

.navbar-content {
    width: 100%;
    max-width: var(--max-content-width);

    font-weight: bold;
    font-size: var(--fs-sm);

    /* Prevent link text (ABOUT US, etc.) from wrapping */
    white-space: nowrap;

    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
}

.navbar-link {
    padding: 0.5rem;
}

.navbar-link:hover {
    color: #b81d21;
    text-decoration: underline;
    text-decoration-thickness: 0.2rem;
    text-underline-offset: 0.3rem;
}

/* Toggled in JS via an Intersection Observer, based on <header> visibility */
.navbar-stickifier {
    position: fixed;
    top: 0;
}

.navbar-button-donate {
    background-color: #cd1120;
    padding: 0.3em 1.2em;
}


/************************
 *    FLEX CONTAINER    *
 *    (hero & intro)    *
 ************************/
.flex-container {
    max-width: var(--max-content-width);

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8rem;

    /* Top = header + navbar + gap, l/r = auto [centered], bottom = 2rem [32px, before cards] */
    margin: calc(var(--el-height-header) + var(--el-height-navbar) + 8rem) auto 2rem;
}


/**************
 *    HERO    *
 **************/
/* TODO: Left side of image clips if under min-width (Firefox ESR) */
.hero-bg-container {
    width: 100vw;
    height: auto;

    position: absolute;
    z-index: -1;
    top: calc(var(--el-height-header) + var(--el-height-navbar));
    overflow: hidden;

    /* Centres bg-hero if it overflowed */
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-container {
    color: white;

    align-self: start;
    margin-left: 3rem;

    display: flex;
    flex-direction: column;
    gap: 1.8rem;
}

.hero-title {
    font-size: var(--fs-lg);
}

.hero-description {
    font-size: var(--fs-md);
}

.hero-buttons {
    display: flex;
    gap: 1rem;
}

.hero-button-learn {
    background-color: #202020;
}

.hero-button-join {
    background-color: #cd1120;
}


/***************
 *    INTRO    *
 ***************/
.intro-container {
    color: white;
    font-size: var(--fs-md);
    text-align: center;

    background-color: #202020;

    display: flex;
    flex-direction: column;
    gap: 2em;

    padding: 4rem 12rem;

    border-radius: 24px;
}

/* Add margin only when needed */
@media (max-width: 76rem) {
    .intro-container {
        margin: 0 1rem;
    }
}

.intro-title {
    font-size: var(--fs-lg);
}

.intro-link, .card-link {
    position: relative;

    color: white;
    font-weight: bold;
    text-decoration: underline;
}

.intro-link {
    font-weight: 900;
}

.intro-link::after, .card-link::after {
    position: absolute;
    margin-left: 0.5em;

    /* CSS arrowhead code */
    content: "\27A4";

    text-decoration: none;
}

.intro-link::after {
    color: #b81d21;
}


/***************
 *    CARDS    *
 ***************/
.card-container {
    /* 1980px / 16 = 123.75, scale up */
    max-width: 124rem;

    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    margin: 0 auto;

    /* TODO: Flexbox isn't aware of its children wrapping and as such may be wider than its children,
         bringing the border/box-shadow along with it. */
    border-bottom: 5px solid white;
    box-shadow: 0 20px 27px -27px;
}

.card {
    max-width: 62rem;
    /* TODO: May need to implement a fallback if supporting legacy browsers, only became widely supported in 2021 */
    /* https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/aspect-ratio#browser_compatibility */
    aspect-ratio: 3/2;

    padding: 4rem;

    font-size: var(--fs-md);
    color: white;
    text-align: center;

    display: flex;
    /* 3/2 = 1.5, 62rem/1.5 = 41.333333rem, round down for easier calculation */
    flex-basis: 41rem;
    flex-grow: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;

    background-repeat: no-repeat;
    background-size: cover;
}

.card-members {
    background-image: url("assets/img/bg-card-members.png");
}

.card-grants {
    background-image: url("assets/img/bg-card-grants.png");
}

.card-icon {
    width: 160px;
    height: 120px;

    pointer-events: none;
}

.card-title-primary {
    font-size: var(--fs-lg);
    font-weight: bold;
}

.card-title-secondary {
    font-style: italic;
}


/********************
 *    SUPPORTERS    *
 ********************/
.supporter-container {
    max-width: 80rem;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;

    margin: 5rem auto;
    padding: 0 1rem;
}

.supporter-header-primary {
    font-size: var(--fs-lg);
    text-align: center;
    /* Prevents underline pseudo-element from overlapping other text */
    line-height: 1.5em;
}

.supporter-header-secondary {
    font-size: var(--fs-md);
    text-align: center;
}

.supporter-logo-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 3rem;
}

.supporter-logo-container img {
    max-height: 150px;
    width: auto;
}


/********************
 *    RESPONSIVE    *
 *  MEDIA  QUERIES  *
 ********************/
/* Mobile (portrait) */
@media (max-width: 480px) {
    body {
        /* LG: 27px, MD: 21px, SM: 13px (based sizing off mobile PSD) */
        --fs-lg: 1.6875rem;
        --ls-md: 1.3125rem;
        --fs-sm: 0.8125rem;

        /* In case of wrapping */
        --el-height-header: 2rem;
    }

    .hero-container {
        margin-left: 1rem;
    }

    .intro-container {
        padding: 4rem 2rem;
    }

    .card {
        padding: 4rem 2rem;
    }
}

